tests/purs/failing/RowsInKinds.out
Error found:
in module [33mMain[0m
at tests/purs/failing/RowsInKinds.purs:14:16 - 14:17 (line 14, column 16 - line 14, column 17)

  Could not match kind
  [33m             [0m
  [33m  ( z :: Type[0m
  [33m  | t25      [0m
  [33m  )          [0m
  [33m             [0m
  with kind
  [33m             [0m
  [33m  ( x :: Type[0m
  [33m  , y :: Type[0m
  [33m  )          [0m
  [33m             [0m

while checking that type [33mZ[0m
  has kind [33mR @Type      [0m
           [33m  ( x :: Type[0m
           [33m  , y :: Type[0m
           [33m  )          [0m
while inferring the kind of [33mP Z[0m
in type synonym [33mTest3[0m

See https://github.com/purescript/documentation/blob/master/errors/KindsDoNotUnify.md for more information,
or to contribute content related to this error.

